# cradle

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.txt
core/: algorithm_templates.h  arena_allocator.h  array.h  assert.h  base_type_declarations.h  base_type_io.h  base_type_traits.h  base_types.h  bit_set.h  bit_stream.h  byte_buffer.h  byte_stream_fixed.h  construct.h  context.h  core.h  cpu_endian.h  dictionary.h  formatted_string_buffer.h  function_call_record.h  function_record.h  functor.h  functor_callable.h  hash.h  hash_table_array.h  hash_table_flat.h  indexed_string.h  journal.h  license.txt  log.h  memory_functions.h  mutex.h  page_allocator.h  platform.h  power_two_functions.h  ref_object.h  small_block_allocator.h  static_to_indexed_string_map.h  string.h  system_includes_linux.h  system_includes_mac_osx.h  (+7 more)
cradle/: SweptEllipsoid.h  UI.h  animation.h  bspTree.h  color.h  cradle.h  cradle_journal.h  fileStream.h  gamepadRender.h  gfxUtil.h  license.txt  lineSegment.h  matrix2d.h  plane2d.h  platform.h  polyBuilder.h  polyLine.h  rect.h  renderSurface.h  sdl_callbacks.h  sdl_platform.h  sfx.h  simpleMesh.h  stream.h  strokeFont.h  surfaceDeformer.h  textureManager.h  timer.h  triangulate.h  tween.h  vectorModel.h  vectorPrimitive.h  voiceCodec.h
kt/: license.txt
libtomcrypt/: CMakeLists.txt  crypt.c  makefile  mycrypt_custom.h  mycrypt_hash.h  sha1.c  sha256.c  tiger.c  twofish.c  yarrow.c
master/: CMakeLists.txt  license.txt  master.cfg  master.cpp  master_config.h  master_interface.h  test_game.cpp
math/: funcs.h  license.txt  mat2.h  mat3.h  mat4.h  math.h  mathConstants.h  mathFunctions.h  mathUtils.h  matrixStack.h  quat.h  vec2.h  vec3.h  vec4.h
notify_sockets/: address.h  asymmetric_key.h  buffer_utils.h  client_puzzle.h  license.txt  nonce.h  notify_connection.h  notify_socket.h  notify_sockets.h  old_arranged_connection_logic.h  packet_stream.h  pending_connection.h  random_generator.h  socket_event_queue.h  sockets.h  symmetric_cipher.h  time.h  udp_socket.h
replicator/: exceptions.h  license.txt  net_connection.h  net_interface.h  net_object.h  net_stringtable.h  net_type_io.h  replicant_connection.h  replicator.h  rpc_connection.h
test/: CMakeLists.txt  cradle_test.cpp  license.txt  test_building.h  test_connection.h  test_game.h  test_gfx.h  test_journal.h  test_net_interface.h  test_player.h  test_ui.h
vectrex/: SweptEllipsoid.h  animation.h  bspTree.h  canvas.h  (+25 more)
(+35 files in other folders)
