cmake_minimum_required(VERSION 3.10)
if(LINUX)
set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_COMPILER clang++)
endif()
set(BUILD_SHARED_LIBS OFF CACHE INTERNAL "")    # Disable shared builds on platforms where it does not make sense to use them
set(SDL_SHARED OFF)
set(SDL_STATIC ON)
set(SDLIMAGE_VENDORED OFF)
if ( EMSCRIPTEN )
set(CMAKE_EXECUTABLE_SUFFIX ".html" CACHE INTERNAL "")
endif()
project(CradleTest VERSION 1.0)
add_subdirectory(SDL)
add_subdirectory(SDL_image)
add_subdirectory(libtomcrypt)
add_subdirectory(test)
add_subdirectory(master)
